replaced confirmation-modal with modal-dialog

--- a/survey-web.csproj
+++ b/survey-web.csproj
@@ -31,14 +31,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="ClientApp\src\app\home\confirmation-modal.ts" />
+    <None Remove="ClientApp\src\app\home\modal-dialog.ts" />
     <None Remove="ClientApp\src\app\home\ResponseModel.ts" />
     <None Remove="ClientApp\src\app\home\UserModel.ts" />
     <None Remove="ClientApp\src\environments\environment.ts" />
   </ItemGroup>
 
   <ItemGroup>
-    <TypeScriptCompile Include="ClientApp\src\app\home\confirmation-modal.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\home\modal-dialog.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\home\UserModel.ts" />
     <TypeScriptCompile Include="ClientApp\src\environments\environment.ts" />
   </ItemGroup>
