--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ ClientApp/src/environments/
 *.user
 *.userosscache
 *.sln.docstates
+package-lock.json
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
